<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="mainmenu">
        <item>String to Binary/Hex Converter</item>
        <item>HTC Serial Number Identification</item>
        <item>Fanfiction Reader (External App)</item>
        <item>Disable Camera</item>
        <item>Application List</item>
        <item>ORD Countdown</item>
        <item>BMI Calculator</item>
        <item>IPPT Calculator</item>
        <item>Vehicle Mileage Tracker</item>
        <item>System Information</item>
        <item>Unicode Emoticons</item>
        <item>Navigation Bar Customizer</item>
        <item>SafetyNet Validator</item>
...
