<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".modules.htcserialidentification.HtcSerialIdentificationActivity">

    <Button
        android:id="@+id/btn_htc_sn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_htc_sn_serialField"
        android:layout_centerHorizontal="true"
        android:text="@string/htc_sn_id_btn_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_htc_sn_serialField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_htc_sn_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tv_htc_sn_result"
        android:layout_marginTop="61dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/htc_sn_serialField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/htc_sn_id_serial_field_hint"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_htc_sn_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_htc_sn_search"
        android:layout_centerHorizontal="true"
        android:text="@string/htc_sn_id_button_phone_serial" />

    <TextView
        android:id="@+id/tv_htc_sn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_htc_sn_serial"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
